--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="advantage__wraper">
                 <div class="advantage__item">
                     <div class="advantage__logo">
-                        <img src="../Restoran/img/logo/Mask Group.svg" alt="">
+                        <img src="../img/logo/Mask Group.svg" alt="">
                     </div>
                     <div class="advantage__description">
                         <div class="advantage__title title">Магическая <span>Атмосфера</span></div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="advantage__item">
                     <div class="advantage__logo">
-                        <img src="../Restoran/img/logo/Mask Group.svg" alt="">
+                        <img src="../img/logo/Mask Group.svg" alt="">
                     </div>
                     <div class="advantage__description">
                         <div class="advantage__title title">Лучшее качество <span>Еды</span></div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="advantage__item">
                     <div class="advantage__logo">
-                        <img src="../Restoran/img/logo/Mask Group.svg" alt="">
+                        <img src="../img/logo/Mask Group.svg" alt="">
                     </div>
                     <div class="advantage__description">
                         <div class="advantage__title title">Недорогая <span>Еда</span></div>
@@ -148,7 +148,7 @@
             <div class="dish__title title">Наши <span>Блюда</span></div>
             <div class="dish__wrapper">
                 <div class="dish__left">
-                    <img src="../Restoran/img/Mask Group.jpg" alt="">
+                    <img src="../img/Mask Group.jpg" alt="">
                 </div>
                 <div class="dish__right">
                     <div class="dish__item">
